[package]
name = "mask-tracked-array"
version = "0.1.0"
edition = "2024"
authors = ["Eisverygoodletter"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Eisverygoodletter/mask-tracked-array"
description = "A no-std no-alloc bitmask based data structure for embedded usecases"
keywords = ["data structures", "embedded", "array"]
categories = ["no-std::no-alloc", "data-structures", "embedded"]

[dependencies]
bit-iter = "1.3.1"
paste = "1.0.15"
serde = { version = "1.0.228", optional = true, default-features = false, features = ["derive"]}

[features]
serde = ["dep:serde"]

[dev-dependencies]
heapless = "0.9.2"
postcard = "1.1.3"
